welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:5: error: ';' expected but '=' found.
  car cases:Int = 1
                ^